--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,4 +1,20 @@
 [Common required information]
 baseURL = http://automationpractice.com/index.php
 page_title = My Store
-password = admin
+password = admin1234567890
+day_DOB = 10
+month_DOB = 10
+year_DOB = 2000
+email = kohadoc250@lutota.com
+first_name = John
+last_name = Smith
+address_first_name = San Francisco
+address_last_name = California
+company = Twitter inc
+address = 1355 Market St #900, P.O. Box 222, Twitter Inc
+city = California
+state = California
+postal_code = 00000
+mobile_phone = +1 415-222-9670
+address_reference = San Francisco
+
